cluster/apps/bazarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr-svc
  labels:
    app.kubernetes.io/name: bazarr
spec:
  selector:
    app.kubernetes.io/name: bazarr
  ports:
    - name: http
      protocol: TCP
      port: 6767
      targetPort: bazarr-port
  type: ClusterIP
