cluster/apps/bazarr/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  labels:
    app.kubernetes.io/name: bazarr
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`bazarr.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: dashboard-headers@file
        - name: authelia
          namespace: authentication-system
      services:
        - name: bazarr
          port: 6767
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME_0}-prod-tls
